# trainitz

./: .gitignore  README.md  pyproject.toml
src/trainitz/: __init__.py  metrics.py
