[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trainitz"
version = "0.1.0"
authors = [
  { name="Artitzco", email="artitzco@proton.me" },
]
description = "A Python library for handling training and sports metrics"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/artitzco/trainitz"
"Bug Tracker" = "https://github.com/artitzco/trainitz/issues"

[tool.setuptools.packages.find]
where = ["src"]
